src/test/resources/repos/invalid-binary-desc-subjects/daa/b38/aaf/daab38aaf09161bfb363c09076024a4d0a981173c39d03d3c77ab2f2f62e6414/v1/inventory.json.sha512
4e98518c1382f7ef118a3c01778cfc6cfe8d689158612694340c15e4b83d4db81dee3b1f4c2b82ccf66fe198749deb34625c6cf4ae42538897f252b356940242	inventory.json